// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContributionCard /> by default matches with snapshot 1`] = `
<div
  className="sc-AxirZ imipRp k-LegacyRewardCard"
  disabled={false}
>
  <div
    className="sc-AxjAm ekdWbF"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--10@l"
      >
        <div
          className={null}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxiKw dAAJKc k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <div
              className="sc-AxhCb zphVT k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          
          <div
            className="sc-AxjAm iOcWzD"
          >
            <p
              className="k-Paragraph k-u-color-font1 k-Paragraph--tertiary k-Paragraph--withoutMargin"
            >
              Custom text description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContributionCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-AxirZ imipRp k-LegacyRewardCard"
  disabled={false}
>
  <div
    className="sc-AxjAm ekdWbF"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
      >
        <div
          className={null}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxiKw dAAJKc k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <div
              className="sc-AxhCb zphVT k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          <div
            className="sc-AxjAm bpEnKz"
          >
            <p
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold k-u-margin-none"
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-AxjAm bsGvJV"
          >
            <p
              className="k-Paragraph k-u-color-font1 k-Paragraph--tertiary k-Paragraph--withoutMargin"
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          className={null}
        >
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title contributors 
              <span
                className="k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title delivery 
              <span
                className="k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
            >
              Custom title availability 
              <span
                className="k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          className="sc-AxjAm iOcWzD"
        >
          <button
            aria-labelledby="Custom text button"
            className="k-Button k-Button--helium k-Button--big k-LegacyRewardCard__button"
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            className="sc-AxjAm ksLovO"
          >
            <div
              className="k-LegacyRewardCard__myContribution"
            >
              <span
                className="sc-AxhUy cQzIpZ k-LegacyRewardCard__iconBadge"
                disabled={false}
              >
                <span
                  className="sc-AxgMl iEQbzS"
                >
                  <svg
                    className="k-IconBadge__svg"
                    fill="#fff"
                    height="8"
                    viewBox="0 0 11 8"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                    />
                  </svg>
                </span>
              </span>
              <div
                className="k-LegacyRewardCard__myContribution__text"
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s LegacyRewardCard__col_image"
      >
        <div
          className="sc-AxjAm StDqN"
        >
          <div
            className={null}
          >
            <img
              alt="Image alt"
              className="k-LegacyRewardCard__image"
              src="#image"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContributionCard /> with tiny version matches with snapshot 1`] = `
<div
  className="sc-AxirZ imipRp k-LegacyRewardCard k-LegacyRewardCard--tinyVersion k-LegacyRewardCard--sOrLessVersion"
  disabled={false}
>
  <div
    className="sc-AxjAm dCdSew"
  >
    <div
      className="k-Grid k-LegacyRewardCard__row"
    >
      <div
        className="k-Grid__col--12"
      >
        <div
          className={null}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxiKw biSFLw k-u-color-font1"
            >
              Custom title mount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <div
              className="sc-AxhCb zphVT k-HorizontalStroke k-HorizontalStroke--size--big"
              color="#222"
              style={
                Object {
                  "height": null,
                  "width": null,
                }
              }
            />
          </div>
          <div
            className="sc-AxjAm bpEnKz"
          >
            <p
              className="k-u-color-font1 k-u-size-big k-u-weight-bold k-u-margin-none"
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-AxjAm bsGvJV"
          >
            <p
              className="k-Paragraph k-u-color-font1 k-Paragraph--quaternary k-Paragraph--withoutMargin"
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          className={null}
        >
          <div
            className="sc-AxjAm ccCISE"
          >
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title contributors 
                <span
                  className="k-u-weight-light"
                >
                  Custom value contributors
                </span>
              </span>
            </div>
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title delivery 
                <span
                  className="k-u-weight-light"
                >
                  Custom value delivery
                </span>
              </span>
            </div>
            <div>
              <span
                className="k-u-color-font1 k-u-weight-regular k-LegacyRewardCard__list"
              >
                Custom title availability 
                <span
                  className="k-u-weight-light"
                >
                  Custom value availability
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        className="k-Grid__col--12 LegacyRewardCard__col_image"
      >
        <div
          className="sc-AxjAm StDqN"
        >
          <div
            className={null}
          >
            <img
              alt="Image alt"
              className="k-LegacyRewardCard__image"
              src="#image"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-AxjAm iySa-Dp"
    >
      <div
        className="k-Grid k-LegacyRewardCard__choiceButton"
      >
        <div
          className="k-Grid__col--12"
        >
          <div
            className="k-LegacyRewardCard__myContribution"
          >
            <span
              className="sc-AxhUy cQzIpZ k-LegacyRewardCard__iconBadge"
              disabled={false}
            >
              <span
                className="sc-AxgMl iEQbzS"
              >
                <svg
                  className="k-IconBadge__svg"
                  fill="#fff"
                  height="8"
                  viewBox="0 0 11 8"
                  width="11"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  
                  <path
                    d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                  />
                </svg>
              </span>
            </span>
            <div
              className="k-LegacyRewardCard__myContribution__text"
            >
              <span
                className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
              >
                Custom my contribution
                <br />
                <a
                  className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                  href="Custom manage link contribution"
                >
                  Custom manage contribution
                </a>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      aria-labelledby="Custom text button"
      className="k-Button k-Button--helium k-Button--big k-LegacyRewardCard__button"
      disabled={false}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      tabIndex={null}
      type="button"
    >
      Custom text button
    </button>
  </div>
</div>
`;
